# python_architecture_practice

./: model.py  pyproject.toml  test_model.py
