[tool.poetry]
name = "python_architecture_practice"
version = "0.1.0"
description = ""
authors = ["Asdrúbal Iván Suárez Rivera <asdrubal.ivan.suarez.rivera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
hypothesis = "^6.57.1"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
pytest-mypy = "^0.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
